[package]
name = "circuit-tiles"
version = "0.1.0"
authors = ["Will Garrett", "Justin Fernald"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"
js-sys = "0.3.51"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]